// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Status Content Component should render cancelled-specific help content when test is in cancelled mode 1`] = `
<div>
  <div>
    <p>
      This test run was cancelled. To re-run this test, click "Edit and Reschedule Test".
    </p>
    <p>
      <span>
        You can read about the different A/B Test states 
      </span>
      <UnstyledLink
        external={true}
        to="https://www.sparkpost.com/docs/tech-resources/a-b-testing-sparkpost/#ab-testing-states"
      >
        here
      </UnstyledLink>
      .
    </p>
  </div>
</div>
`;

exports[`Status Content Component should render distinct help content when test is completed for bayesian mode tests and the winner was NOT found 1`] = `
<div>
  <div>
    This test has concluded and it now sending the default template. You may override it with a new one without starting a new test. This test was started and completed at the times shown.
  </div>
</div>
`;

exports[`Status Content Component should render distinct help content when test is completed for bayesian mode tests and the winner was found 1`] = `
<div>
  <div>
    This test has concluded and it now sending the winning template. You may override it with a new one without starting a new test. This test was started and completed at the times shown.
  </div>
</div>
`;

exports[`Status Content Component should render distinct help content when test is completed for learning mode tests 1`] = `
<div>
  <div>
    This test has concluded and it now sending the default template. You may override the default with a new one without starting a new test. This test was started and completed at the times shown.
  </div>
</div>
`;

exports[`Status Content Component should render draft-specific help content when test is in draft mode 1`] = `
<div>
  <div>
    <p>
      You can update your Test Name and select a start time and end time to schedule your A/B Test.
    </p>
    <p>
      <span>
        You can read about the different A/B Test states 
      </span>
      <UnstyledLink
        external={true}
        to="https://www.sparkpost.com/docs/tech-resources/a-b-testing-sparkpost/#ab-testing-states"
      >
        here
      </UnstyledLink>
      .
    </p>
  </div>
</div>
`;

exports[`Status Content Component should render nothing when a test is malformed 1`] = `<div />`;

exports[`Status Content Component should render running-specific help content when test is in running mode 1`] = `
<div>
  <div>
    <p>
      This test is currently running. It will conclude when either:
    </p>
    <ul>
      <li>
        the end date + engagement timeout period ends
      </li>
      <li>
        the desired confidence level (if using Bayesian mode) has been reached.
      </li>
      <li>
        the desired sample size limit is reached + engagement timeout period ends
      </li>
    </ul>
    <p>
      <span>
        You can read about the different A/B Test states 
      </span>
      <UnstyledLink
        external={true}
        to="https://www.sparkpost.com/docs/tech-resources/a-b-testing-sparkpost/#ab-testing-states"
      >
        here
      </UnstyledLink>
      .
    </p>
  </div>
</div>
`;

exports[`Status Content Component should render scheduled-specific help content when test is in scheduled mode 1`] = `
<div>
  <div>
    <p>
      This test has been scheduled. You can update your Test Name, start time, or end time.
    </p>
    <p>
      <span>
        You can read about the different A/B Test states 
      </span>
      <UnstyledLink
        external={true}
        to="https://www.sparkpost.com/docs/tech-resources/a-b-testing-sparkpost/#ab-testing-states"
      >
        here
      </UnstyledLink>
      .
    </p>
  </div>
</div>
`;
